Ensure video title is clipped to two lines

--- a/ApiReview.Client/wwwroot/css/site.css
+++ b/ApiReview.Client/wwwroot/css/site.css
@@ -236,9 +236,12 @@ app {
 }
 
 .yt-video-title {
+    display: block;
     font-size: 1rem;
     line-height: 1.2rem;
     max-height: 2.4rem;
+    overflow: hidden;
+    white-space: normal;
 }
 
 .yt-video-selected {
